<resources>
    <string name="app_name">Login template MVP</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="sign_in">sign in</string>
    <string name="sign_up">sign up</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="cannot_find_account_error_message">Account does not exist</string>
    <string name="connection_error_message">Cannot connect to the server</string>
    <string name="wrong_input_error_message">Form must be filled out</string>
</resources>